2009-03-30  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPervasives.mli: [sexp_of_result], [result_of_sexp] added

	* src/core/extlib/std.ml: [sexp_of_result], [result_of_sexp] added
	
	* src/core/extlib/std.ml: [result] now [with sexp]

2009-03-26  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/print.ml*: remove this annoying and useless
     	third type parameter of [Print.directive]

2009-03-25  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/value_printer.ml*: added

	* src/core/extlib/extPervasives.ml*: added value printers

	* src/syntax/pa_strings/pa_format.ml: handle value printers

2009-03-25  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/seq.ml*: [Failure] replaced with [Invalid_argument]

	* src/core/extlib/extInt.ml: [SafeInt.mul] rewritten without need for native integersx

2009-03-24  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPervasives.ml: [printer_S] now uses [String.quote]

	* src/core/extlib/extPervasives.ml*: [printer_sc], [printer_Sc] added

	* src/core/extlib/extString.ml*: [String.Cap.print*], [String.Cap.quote] added

	* src/core/extlib/innerIO.ml: [read_all] now stops properly also on [Input_closed]

	* src/core/extlib/extLexing.ml: [from_channel] now raises [End_of_file]

	* src/libs/compilers/compilers.ml*: [interpreter_option] added

	* src/libs/compilers/compilers.ml*: [ocaml] added

	* src/batteries_toolchain/ocaml.in: now using "@DESTDIR@/toplevel.top"

	* src/core/baselib/batlib_Baselib_Lexing.*: removed
	
	* src/main/threads/batteries.ml: [ExtLexing.Lexing] replaces [Lexing]

	* src/main/nothreads/batteries.ml: [ExtLexing.Lexing] replaces [Lexing]

	* src/core/extlib.mlpack: [ExtLexing] added

	* src/core/extlib/extLexing.ml*: created

2009-03-24  Jeremie Dimino <jeremie@dimino.org>

	* src/batteries_toolchain/toplevel/cbtop.ml: hack to make syntax extensions to work for scripts
	